--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
 
     <header class="box-container">
         <div class="header-decoration">
-            <div class="logo-item">
-                <img src="svg icons/amblem & exchange.svg" alt="">
+            <div>
+                <img src="svg icons/amblem & exchange.svg" alt="" width="422px" height="48px">
             </div>
 
             <div>
-                <button>LOGIN</button>
+                <button class="login-button">LOGIN</button>
             </div>
         </div>
         <!-- header - Logo and login section Starts-->
@@ -30,21 +30,22 @@
         <div class="container-items">
             <div>
                 <div class="header-text">
-                    <h1 style="color: #354e57;">Exchange Your Money</h1>
-                    <h1 style="color: #87c241;">Easily, Quickly And Securely</h1>
+                    <h1 style="color: #354e57; font-size: 48px;">Exchange Your Money</h1>
+                    <h1 style="color: #87c241; font-size: 48px;">Easily, Quickly And Securely</h1>
 
-                    <p>Best source of currency conversion, sending money
+                    <p style="font-size: 16px;">Best source of currency conversion, sending money
                         online and tracking exchange rates. Live tracking and
                         notifications + flexible delivery and payment options.</p>
-                    <div class="hero-image"> <img src="svg icons/HERO.svg" alt="" width="500px"> </div>
+
                 </div>
             </div>
+            <div class="hero-image"> <img src="svg icons/HERO.svg" alt="" width="500px"> </div>
 
-            <div>
-                <button>Exchange Fund</button>
-            </div>
         </div>
-        <!--Container ends-->
+        <div class="first-container-button">
+            <button>Exchange Fund</button>
+        </div>
+        <!--First Container ends-->
 
     </header>
     <div>
