--- a/index.html
+++ b/index.html
@@ -29,17 +29,19 @@
         <!--First Container starts-->
         <div class="container-items">
             <div>
-                <div class="header-text">
-                    <h1 style="color: #354e57; font-size: 48px;">Exchange Your Money</h1>
-                    <h1 style="color: #87c241; font-size: 48px;">Easily, Quickly And Securely</h1>
+                <div style="line-height: 1.2;" class="header-text">
+                    <h1 style="color: #354e57; font-size: 48px;">Exchange Your Money
+                        <span style="color: #87c241; font-size: 48px;">Easily, Quickly And Securely</span>
+                    </h1>
 
-                    <p style="font-size: 16px;">Best source of currency conversion, sending money
+
+                    <p style="font-size: 16px; color: #354e57;">Best source of currency conversion, sending money
                         online and tracking exchange rates. Live tracking and
                         notifications + flexible delivery and payment options.</p>
 
                 </div>
             </div>
-            <div class="hero-image"> <img src="svg icons/HERO.svg" alt="" width="500px"> </div>
+            <div> <img src="svg icons/HERO.svg" alt="" width="500px"> </div>
 
         </div>
         <div class="first-container-button">
