--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <header class="box-container">
         <div class="header-decoration">
             <div>
-                <img src="svg icons/amblem & exchange.svg" alt="" width="422px" height="48px">
+                <img src="svg icons/amblem & exchange.svg" alt="" width="300px" >
             </div>
 
             <div>
@@ -29,7 +29,7 @@
         <!--First Container starts-->
         <div class="container-items">
             <div>
-                <div style="line-height: 1.2;" class="header-text">
+                <div style="line-height: 1.2;" class="main-text">
                     <h1 style="color: #354e57; font-size: 48px;">Exchange Your Money
                         <span style="color: #87c241; font-size: 48px;">Easily, Quickly And Securely</span>
                     </h1>
@@ -41,7 +41,7 @@
 
                 </div>
             </div>
-            <div> <img src="svg icons/HERO.svg" alt="" width="500px"> </div>
+            <div class="hero-icon-style"> <img style="padding-left: 65px; padding-top: 5px;" src="svg icons/HERO.svg" alt="" width="490px" height="490px"> </div>
 
         </div>
         <div class="first-container-button">
