--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
         <div class="container-items">
             <div>
                 <div style="line-height: 1.2;" class="main-text">
-                    <h1 style="color: #354e57; font-size: 48px;">Exchange Your Money
-                        <span style="color: #87c241; font-size: 48px;">Easily, Quickly And Securely</span>
+                    <h1 style="color: #354e57; font-size: 48px;">Exchange Your Money <br>
+                        <span style="color: #87c241; font-size: 48px;">Easily, Quickly And <br>Securely</span>
                     </h1>
 
 
-                    <p style="font-size: 16px; color: #354e57;">Best source of currency conversion, sending money
-                        online and tracking exchange rates. Live tracking and
+                    <p style="font-size: 16px; color: #354e57;">Best source of currency conversion, sending money <br>
+                        online and tracking exchange rates. Live tracking and<br>
                         notifications + flexible delivery and payment options.</p>
 
                 </div>
