--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
             <div class="hero-icon-style"> <img style="padding-left: 65px; padding-top: 5px;" src="svg icons/HERO.svg" alt="" width="490px" height="490px"> </div>
 
         </div>
-        <div class="first-container-button">
-            <button>Exchange Fund</button>
+        <div>
+            <button class="first-container-button">Exchange Fund</button>
         </div>
         <!--First Container ends-->
 
