--- a/index.html
+++ b/index.html
@@ -18,12 +18,27 @@
     <header class="box-container">
         <div class="header-decoration">
             <div>
-                <img src="svg icons/amblem & exchange.svg" alt="" width="285px" >
+                <img src="svg icons/amblem & exchange.svg" alt="" width="285px">
             </div>
 
             <div>
-                <button class="login-button">LOGIN</button>
+               <button class="modal-show">LOGIN</button> 
+               <div  class="modal-hidden">
+            <button class="close_modal" >&times;</button>
+            <input type="E Mail ID">
+            <input type="Password">
+            <div>
+            <ul>
+                <li>I don't have an account</li>
+                <li>Forgot password?</li>
+            </ul>
             </div>
+            <button>LOGIN</button>
+            
+
+               </div>
+            </div>
+
         </div>
         <!-- header - Logo and login section Starts-->
         <!--First Container starts-->
@@ -41,7 +56,8 @@
 
                 </div>
             </div>
-            <div class="hero-icon-style"> <img style="padding-left: 65px; padding-top: 5px;" src="svg icons/HERO.svg" alt="" width="490px" height="490px"> </div>
+            <div class="hero-icon-style"> <img style="padding-left: 65px; padding-top: 5px;" src="svg icons/HERO.svg"
+                    alt="" width="490px" height="490px"> </div>
 
         </div>
         <div>
@@ -51,7 +67,6 @@
 
     </header>
     <div>
-
 
 </body>
 
