--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
             <div>
                <button class="modal-show">LOGIN</button> 
-               <div  class="modal-hidden">
+               <div  class="modal hidden">
             <button class="close_modal" >&times;</button>
             <input type="E Mail ID">
             <input type="Password">
