--- a/index.html
+++ b/index.html
@@ -24,16 +24,16 @@
             <div>
                <button class="modal-show">LOGIN</button> 
                <div  class="modal hidden">
-            <button class="close_modal" >&times;</button>
+           
             <input type="E Mail ID">
             <input type="Password">
             <div>
-            <ul>
-                <li>I don't have an account</li>
-                <li>Forgot password?</li>
+            <ul class="list-items">
+                <li ><a class="list-text" href="https://www.google.com">I don't have an account</a></li>
+                <li ><a class="list-text" href="https://www.google.com">Forgot password?</a></li>
             </ul>
             </div>
-            <button>LOGIN</button>
+            <button class="pop-login-modal">LOGIN</button>
             
 
                </div>
