--- a/index.html
+++ b/index.html
@@ -16,27 +16,37 @@
     <!-- header - Logo and login section Starts-->
 
     <header class="box-container">
+
         <div class="header-decoration">
             <div>
                 <img src="svg icons/amblem & exchange.svg" alt="" width="285px">
             </div>
 
             <div>
-               <button class="modal-show">LOGIN</button> 
-               <div  class="modal hidden">
-           
-            <input type="E Mail ID">
-            <input type="Password">
-            <div>
-            <ul class="list-items">
-                <li ><a class="list-text" href="https://www.google.com">I don't have an account</a></li>
-                <li ><a class="list-text" href="https://www.google.com">Forgot password?</a></li>
-            </ul>
-            </div>
-            <button class="pop-login-modal">LOGIN</button>
-            
+                <button class="modal-show">LOGIN</button>
+                <div class="modal hidden">
+                    <img src="svg icons/amblem & exchange.svg" alt="" width="285px">
+                    <hr style="align-items: flex-end;" width="350px" size="5px" color="#87c241">
+                    <div class="hidden-account-style">
+                        <p
+                            style="font-family: 'proxima nova' sans-serif; color: #63a022 ; font-weight: bold; font-size: 20px; margin-left: 19px;">
+                            Login Account</p>
+                    </div>
 
-               </div>
+                    <input class="input-size" type="E Mail ID">
+                    <input class="input-size" type="Password">
+
+                    <div>
+                        <ul class="list-items">
+                            <li><a class="list-text" href="https://www.google.com">I don't have an account</a></li>
+                            <li><a class="list-text" href="https://www.google.com">Forgot your password?</a></li>
+                        </ul>
+                    </div>
+                    <div class="pop-login-button">
+                        <button class="pop-login-modal">LOGIN</button>
+                    </div>
+
+                </div>
             </div>
 
         </div>
@@ -66,8 +76,36 @@
         <!--First Container ends-->
 
     </header>
-    <div>
-
+    <!--main box starts-->
+    <main class="main-container">
+        <div>
+            <ul>
+                <li class="main-list-style"><img src="svg icons/SECURE(1).svg" alt="">
+                    <h1>SECURE</h1>
+                    <p>Send money online fast, secure <br>and easy. Live tracking and
+                        <br>notifications + flexible delivery <br>and payment options.
+                    </p>
+                </li>
+                <li class="main-list-style"><img src="svg icons/ACCESSIBLE(1).svg" alt="">
+                    <h1>EASY ACCESSIBLE</h1>
+                    <p>Create a chart for any currency pair <br>
+                        in the world to see their currency <br> history.
+                        These currency charts use <br> live mid-market rates, are easy to <br> use, and very reliable.
+                    </p>
+                </li>
+                <li class="main-list-style"><img src="svg icons/FAST(1).svg" alt="">
+                    <h1>FAST AND RELIABLE</h1>
+                    <p>Need to know
+                        when a currency hits a <br> specific rate? The Xe Rate Alerts will <br>let you know when the
+                        rate
+                        you need <br> is triggered on your selected <br> currency pairs.
+                    </p>
+                </li>
+            </ul>
+        </div>
+    </main>
+    <!--main box ends-->
+    <script type="module" src="node.js"></script>
 </body>
 
 </html>
