--- a/index.html
+++ b/index.html
@@ -77,25 +77,25 @@
 
     </header>
     <!--main box starts-->
-    <main class="main-container">
-        <div>
-            <ul>
-                <li class="main-list-style"><img src="svg icons/SECURE(1).svg" alt="">
-                    <h1>SECURE</h1>
-                    <p>Send money online fast, secure <br>and easy. Live tracking and
+    <main>
+        <div class="main-box">
+            <ul class="main-container">
+                <li class="main-list-style"><img style="margin: 40px; align-items: center;" src="svg icons/SECURE(1).svg" alt="" >
+                    <h1 style="color: #63a022; margin: 40px;">SECURE</h1>
+                    <p style="color: 848f93; margin: 40px; font-weight: normal; font-size: 16px;">Send money online fast, secure <br>and easy. Live tracking and
                         <br>notifications + flexible delivery <br>and payment options.
                     </p>
                 </li>
-                <li class="main-list-style"><img src="svg icons/ACCESSIBLE(1).svg" alt="">
-                    <h1>EASY ACCESSIBLE</h1>
-                    <p>Create a chart for any currency pair <br>
+                <li class="main-list-style"><img style="margin: 40px; align-items: center; " src="svg icons/ACCESSIBLE(1).svg" alt="">
+                    <h1 style="color: #63a022; margin: 40px; ">EASY ACCESSIBLE</h1>
+                    <p style="color: 848f93; margin: 40px; font-weight: normal; font-size: 16px; ">Create a chart for any currency pair <br>
                         in the world to see their currency <br> history.
                         These currency charts use <br> live mid-market rates, are easy to <br> use, and very reliable.
                     </p>
                 </li>
-                <li class="main-list-style"><img src="svg icons/FAST(1).svg" alt="">
-                    <h1>FAST AND RELIABLE</h1>
-                    <p>Need to know
+                <li class="main-list-style"><img style="margin: 40px; align-items: center;" src="svg icons/FAST(1).svg" alt="">
+                    <h1 style="color: #63a022; margin: 40px;">FAST AND RELIABLE</h1>
+                    <p style="color: 848f93; margin: 40px; font-weight: normal; font-size: 16px; font-display:block;">Need to know
                         when a currency hits a <br> specific rate? The Xe Rate Alerts will <br>let you know when the
                         rate
                         you need <br> is triggered on your selected <br> currency pairs.
